# zbus-flatpak-portal

./: .gitignore  Cargo.toml  local.zecakeh.ZbusFlatpakPortal.yaml
src/: main.rs
